# python-project-50

./: Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff_builder.py  diff_gen.py  formatter.py  generate_diff.py  parser.py  parsing.py  plain.py
gendiff/formats/: plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff.py'
tests/: test_diff_gen.py  test_formats.py  test_gendiff.py  test_generate_diff.py  test_parser.py
tests/fixtures/: expected_json_output.txt
