[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Maxcosanostra <155756786+Maxcosanostra@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
